# AI_Lab

./: 2205335_AILab3.ipynb  2205335_AILab4.ipynb  2205335_assignmentAI2.ipynb  AIlabsessional.ipynb  README.md  assignments_a.ipynb  hill_climbing_problem_2205335_AILAB5.ipynb
Agents/: coding-agent.py  legal_agent.py  pyproject.toml  recipe_agent.py  research_agent.py
Agents/tmp/: Research the latest developments in brain-computer interfaces.md
